@@ -541,7 +541,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
                 try
                 {
                     Class instanceType = SCOUtils.getContainerInstanceType(type, mmd.getOrderMetaData() != null);
-                    coll = (Collection<Object>) instanceType.newInstance();
+                    coll = (Collection<Object>) instanceType.getDeclaredConstructor().newInstance();
                 }
                 catch (Exception e)
                 {
@@ -592,7 +592,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
                 try
                 {
                     Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), false);
-                    map = (Map) instanceType.newInstance();
+                    map = (Map) instanceType.getDeclaredConstructor().newInstance();
                 }
                 catch (Exception e)
                 {
@@ -762,7 +762,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
                 try
                 {
                     Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), mmd.getOrderMetaData() != null);
-                    coll = (Collection<Object>) instanceType.newInstance();
+                    coll = (Collection<Object>) instanceType.getDeclaredConstructor().newInstance();
                 }
                 catch (Exception e)
                 {
@@ -883,7 +883,7 @@ public class FetchFieldManager extends AbstractFetchFieldManager
                 try
                 {
                     Class instanceType = SCOUtils.getContainerInstanceType(mmd.getType(), false);
-                    map = (Map) instanceType.newInstance();
+                    map = (Map) instanceType.getDeclaredConstructor().newInstance();
                 }
                 catch (Exception e)
                 {
