@@ -140,7 +140,7 @@ public class JSONArray
                 case ')' :
                     if (q != c)
                     {
-                        throw x.syntaxError("Expected a '" + new Character(q) + "'");
+                        throw x.syntaxError("Expected a '" + Character.valueOf(q) + "'");
                     }
                     return;
                 default :
